--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,30 @@
 
 /* ------------------------------ End of Leon's CSS ------------------------------------ */
 
+/* ------------------------------ Start of Anna's CSS ------------------------------------ */
+.aria-label-heading {
+    color: #c2c1c1 !important;
+}
+
+.aria-label-underline {
+    text-decoration: underline;
+}
+
+.aria-label-list {
+    margin: 0;
+    padding: 0;
+}
+
+.aria-label-list li {
+    font-size: 35px;
+    margin: 5px 0;
+}
+
+.aria-label-highlighted {
+    color: #edd714;
+    font-weight: bold;
+}
+/* ------------------------------ End of Anna's CSS ------------------------------------ */
 
 
 
