--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,26 @@
-/* ------------------------------ Start of Leon's CSS ------------------------------------ */
 
-#aria-keyshortcuts{
+/* ------------------------------ Start of main CSS ------------------------------------ */
+
+/*customize controls color to be more visible for the slides*/
+.reveal .controls{
+    color: aqua!important;
+}
+
+/* ------------------------------ End of main CSS ------------------------------------ */
+
+/* ------------------------------ Start of Leon's CSS ------------------------------------ */
+#aria-keyshortcuts {
     text-align: center;
     font-size: 0.7em!important;
     display: flex!important;
-    height: auto;
+    height: auto; 
     align-items: center;
     justify-content: center;
-}
-#aria-keyshortcuts h2, #aria-keyshortcuts h3{
-    text-transform: capitalize!important;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
-}
-#aria-keyshortcuts h2{
-    color: #36363e;
-    font-size: 1.2em;
-}
-#aria-keyshortcuts h3{
-    color: white;
+    
 }
 
-#aria-keyshortcuts-01 h3.gradient-border.gradient-border-01{
-    z-index: -1;
-    position: relative;
-}
-
-#aria-keyshortcuts-10 h2 {
-    color: #f7f7ff;
-}
-#aria-keyshortcuts-10 code{
-    color: #357ae8;
-    font-size: 1.1em;
-    padding: 14px;
-    margin: 3px;
-}
-
-#aria-keyshortcuts, #aria-keyshortcuts > section {
-    min-height: 90% !important;
-    top: auto !important;
-    text-align: center;
-    font-size: 0.7em!important;
-    display: flex!important;
-    height: auto!important;
-    align-items: center!important;
-    justify-content: center!important;
-}
-  
-#aria-keyshortcuts > section {
-    min-height: 100% !important;
-    top: auto !important;
+.aria-keyshortcuts{
+    background:linear-gradient(to bottom, #1f1e1d, #A9A9A9)!important;
 }
 
 #aria-keyshortcuts mark{
@@ -58,211 +30,55 @@
     padding-top: 2px;
     padding-bottom: 2px;
     border-radius: 4px;
-    background-color: #fbfbfb59;
+}
+#aria-keyshortcuts-01 .gradient-border-01 > mark {
+    margin-left: 0px;
+}
+#aria-keyshortcuts *{
+    line-height: 1.5!important;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="1" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(65,138,219,1) 55%, rgba(0,212,255,1) 100%);
+#aria-keyshortcuts h3{
+    font-size: 1em!important;
+    word-break: break-word;
+    text-align: left;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="2" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(246,81,29,1) 55%, rgba(255,255,255,1) 100%);
+#aria-keyshortcuts h4{
+    word-break: break-word;
+    text-align: left;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="3" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(127,184,0,1) 55%, rgba(255,255,255,1) 100%);
+#aria-keyshortcuts h2 {
+    font-size: 1.4em!important;
+    color: #c2c1c1 !important;
+    word-break: break-all;
+}
+#aria-keyshortcuts p{
+    text-align: justify;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="4" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(255,174,3) 55%, rgba(255,255,255,1) 100%);
+#aria-keyshortcuts pre code{
+    background-color: #2b2b2b;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="5" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(206,45,79) 55%, rgba(255,255,255,1) 100%);
+#aria-keyshortcuts-05 ol,  #aria-keyshortcuts-09 ul{
+    list-style: none!important;
+    counter-reset: my-awesome-counter;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="6" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(155,126,222) 55%, rgba(255,255,255,1) 100%);
-}
-#aria-keyshortcuts [data-keyshortcuts="7" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(254,147,140) 55%, rgba(255,255,255,1) 100%);
-}
-#aria-keyshortcuts [data-keyshortcuts="8" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(155,197,61) 55%, rgba(255,255,255,1) 100%);
+#aria-keyshortcuts-05 ol li , #aria-keyshortcuts-09 ul li{
+    counter-increment: my-awesome-counter;
 }
 
-#aria-keyshortcuts [data-keyshortcuts="9" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(55, 119, 113) 55%, rgba(255,255,255,1) 100%);  
-}
-
-#aria-keyshortcuts [data-keyshortcuts="10" ]{
-    background: rgb(2,0,36);
-    background:linear-gradient(306deg, rgba(2,0,36,1) 0%, rgba(2,24,43,100) 55%, rgba(255,255,255,1) 100%);
-    
-}
-
-#aria-keyshortcuts-10 > p{
-    word-wrap: break-word;
-}
-
-#aria-keyshortcuts h2, #aria-keyshortcuts h3, #aria-keyshortcuts p{
-    margin: var(--r-block-margin) 15px!important;
-    padding: 15px!important;
-    border: 10px solid;
-    border-image-slice: 1;
-    border-width: 5px;
-    line-height: 1.7;
-}
-
-#aria-keyshortcuts-04 p{
-    border:none!important;
-}
-
-.gradient-border {
-    box-sizing: border-box;
-    display: inline-block;
-    margin: 10px;
-    border-style: solid;
-    border-image-slice: 1!important;
-}
-
-#aria-keyshortcuts-01 .gradient-border{
-    border-image-source:linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(65,138,219,1) 55%, rgba(255,255,255,1) 100%);
-}
-
-#aria-keyshortcuts-02 .gradient-border{
-    border-image-source:linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(246,81,29,1) 55%, rgba(255,255,255,1) 100%);
-}
-
-#aria-keyshortcuts-03 .gradient-border{
-    border-image-source:linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(127,184,0,1) 55%, rgba(255,255,255,1) 100%);
-}
-
-#aria-keyshortcuts-04 .gradient-border{
-    border-image-source: linear-gradient(-16deg, rgba(2,0,36,1) 0%, rgba(255,174,3) 55%, rgba(255,255,255,1) 130%);
-}
-
-#aria-keyshortcuts-05 .gradient-border{
-    border-image-source: linear-gradient(17deg, rgba(2,0,36,1) -100%, rgba(206,45,79) 23%, rgba(255,255,255,1) 197%);
-}
-
-#aria-keyshortcuts-08 > .gradient-border{
-    border-width: 5px;
-    border-image-source: linear-gradient(17deg, rgba(2,0,36,1) -100%, rgba(155,197,61) 23%, rgba(255,255,255,1) 197%);
-    position: relative;
-    z-index: -1;
-}
-
-#aria-keyshortcuts-01 .gradient-border {
-    border-image-source: linear-gradient(320deg, rgba(2,0,36,1) 0%, rgba(65,138,219,1) 71%, rgba(255,255,255,1) 121%);
+#aria-keyshortcuts-05 ol li::before,
+#aria-keyshortcuts-09 ul li::before{
+    content: "" counter(my-awesome-counter);
+    font-weight: bold;
+    margin-right: 0.5rem;
+    color: #1f1e1d;
 }
   
-#aria-keyshortcuts-02 .gradient-border {
-    border-image-source: linear-gradient(320deg, rgba(2,0,36,1) 0%, rgba(246,81,29,1) 71%, rgba(255,255,255,1) 121%)
-}
-
-#aria-keyshortcuts-03 .gradient-border {
-    border-image-source: linear-gradient(320deg, rgba(2,0,36,1) 0%, rgba(127,184,0,1) 71%, rgba(255,255,255,1) 121%);
-}
-
-.gradient-border-01, 
-.gradient-border-02,
-.gradient-border-03, 
-.gradient-border-04, 
-.gradient-border-05{
-    position: relative;
-    z-index: -1;
-}
-
-#aria-keyshortcuts-04 .gradient-border-04 {
-    border-width: 5px;
-    border-image-source: linear-gradient(320deg, rgba(2,0,36,1) 0%, rgba(255,174,3) 71%, rgba(255,255,255,1) 121%);
-    position: relative;
-    z-index: -1;
-}
-
-#aria-keyshortcuts-05 .gradient-border-05 {
-    border-width: 5px;
-    border-image-source: linear-gradient(17deg, rgba(2,0,36,1) -100%, rgba(206,45,79) 23%, rgba(255,255,255,1) 197%);
-    position: relative;
-    z-index: -1;
-}
-
-.gradient-border-top { border-image-width: 35px 0 0 0; }
-.gradient-border-left { border-image-width: 0 0 0 35px; }
-.gradient-border-bottom { border-image-width: 0 0 35px 0; }
-.gradient-border-right { border-image-width: 0 35px 0 0; }
-.gradient-border-all { border-image-width: 35px; }
-
-.specialunderline{
-    position: relative;
-    border: none!important;
-}
-.specialunderline::before {
-    background-color: #418ADB;
-    content: "";
-    position: absolute;
-    width: calc(100% + 4px);
-    height: 19%;
-    left: -2px;
-    bottom: 19px;
-    z-index: -1;
-    transform: rotate(359deg);
-    transform: rotate(-2deg);
-    height: 60%;
-    left: -2px;
-    bottom: 0;
-    z-index: -1;
-    transform: rotate(-2deg);
-    content: " ";
-    display: block;
-    height: 90%;
-    width: 100%;
-    margin-left: -3px;
-    margin-right: -3px;
-    position: absolute;
-    transform: rotate(-2deg);
-    top: -1px;
-    left: -1px;
-    border-radius: 20% 25% 20% 24%;
-    padding: 10px 3px 3px 10px;
-}
-
-.codestyle{
-    margin: 22px!important; 
-    border: 0.3em solid #333!important;
-    white-space: pre!important;
-    background: #191919;
-}
-
-.codestyle code.language-markup{
-    white-space: pre-line!important;
-}
-
-#aria-keyshortcuts-05 ol{
-    margin-left: 60px;
-    text-align: left;
-    display: inline-block;
-    text-wrap: balance;
-}
-
-#aria-keyshortcuts-05 h4{
-    margin-left: 15px;
-}
-
-#aria-keyshortcuts-08  h3, #aria-keyshortcuts-08  p{
-    border: none;
-}
-
 
 
 /* ------------------------------ End of Leon's CSS ------------------------------------ */
