--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
 /* ------------------------------ Start of main CSS ------------------------------------ */
 
 /*customize controls color to be more visible for the slides*/
-.reveal .controls{
-    color: aqua!important;
-}
+
+.reveal:not(.rtl) .controls[data-controls-back-arrows=faded] .navigate-left.enabled{opacity:.8}
 
 /* ------------------------------ End of main CSS ------------------------------------ */
 
+
 /* ------------------------------ Start of Leon's CSS ------------------------------------ */
+
 #aria-keyshortcuts {
     text-align: center;
     font-size: 0.7em!important;
@@ -79,7 +80,6 @@
     color: #1f1e1d;
 }
   
-
 
 /* ------------------------------ End of Leon's CSS ------------------------------------ */
 
