--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
 .reveal:not(.rtl) .controls[data-controls-back-arrows=faded] .navigate-left.enabled{opacity:.8}
 
 /* ------------------------------ End of main CSS ------------------------------------ */
-
+ .a11y-list {
+  font-size: 35px;
+ }
 
 /* ------------------------------ Start of Leon's CSS ------------------------------------ */
 
