changed font-size of PROJECT INSIGHTS <h4> and <li>

--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,7 @@ button.describedby-close-btn {
 .div-useful-resources ol a:hover {
   color: #edd714;
 }
+
+.project-insights{
+  font-size: 35px;
+}
