fixed some w3c issues
every section includes h2 tag and every subsection must have h3 tag
deleted some unused code
deletes extra styles

--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,9 @@
   justify-content: center;
 }
 
-.aria-keyshortcuts {
+/* .aria-keyshortcuts {
   background: linear-gradient(to bottom, #1f1e1d, #a9a9a9) !important;
-}
+} */
 
 #aria-keyshortcuts mark {
   margin: 8px;
