--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@
 }
 
 mark{
-  background-image: linear-gradient(0deg, #1e5520 0%, #0e2b0f 100%);
-  filter: drop-shadow(0 2px 2px hsla(145, 100%, 20%, 1));
+  background-image: linear-gradient( to right top, #2b2b2b, #313131, #383838, #3e3e3e, #454545, #444444, #444444, #434343, #3b3b3b, #333333, #2b2b2b, #242424 ) !important;
   padding-right: 19px;
   padding-left: 19px;
   padding-top: 0px;
