--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@
 }
 
 mark{
-  background-image: linear-gradient( to right top, #2b2b2b, #313131, #383838, #3e3e3e, #454545, #444444, #444444, #434343, #3b3b3b, #333333, #2b2b2b, #242424 ) !important;
+  color: yellow;
+  background: #000000 url(https://www.transparenttextures.com/patterns/subtle-grey.png) repeat;
   padding-right: 19px;
   padding-left: 19px;
   padding-top: 0px;
   padding-bottom: 0px;
-  color:#fff;
 }
 
 .reveal:not(.rtl)
