--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 mark{
   color: yellow;
-  background: #000000 url(https://www.transparenttextures.com/patterns/subtle-grey.png) repeat;
+  background: #000000 url(../assets/subtle-grey.png) repeat;
   padding-right: 19px;
   padding-left: 19px;
   padding-top: 0px;
