--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.background-pattern{
+  background: #000000 url(../assets/subtle-grey.png) repeat!important;
+  background-image: none!important;
+}
+
 .reveal .slide-background {
   background-image: linear-gradient(
     to right top,
@@ -14,11 +19,6 @@
     #2b2b2b,
     #242424
   ) !important;
-}
-
-.background-pattern{
-  background: #000000 url(../assets/subtle-grey.png) repeat!important;
-  background-image: unset;
 }
 
 mark{
