--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-.reveal .slide-background.background-pattern{
-  background: #000000 url(../assets/subtle-grey.png) repeat!important;
-  background-image: none!important;
-}
-
 .reveal .slide-background {
   background-image: linear-gradient(
     to right top,
@@ -20,6 +15,12 @@
     #242424
   ) !important;
 }
+
+.reveal .slide-background.background-pattern{
+  background: #000000 url(../assets/subtle-grey.png) repeat!important;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0),rgba(0,0,0,0.0))!important;
+}
+
 
 mark{
   color: yellow;
