--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 .reveal .slide-background.background-pattern{
 /*   background: #000000 url(../assets/subtle-grey.png) repeat!important; */
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.49),rgba(0,0,0,0.49)), url(../assets/subtle-grey.png);
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.49),rgba(0,0,0,0.49)), url(../assets/subtle-grey.png)!important;
 }
 
 
