--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,17 @@
 }
 
 .reveal .slide-background.background-pattern{
-/*   background: #000000 url(../assets/subtle-grey.png) repeat!important; */
   background-image: linear-gradient(0deg, rgba(0,0,0,0.49),rgba(0,0,0,0.49)), url(../assets/subtle-grey.png)!important;
+}
+
+#home-page#section p{
+  color: rgb(75, 85, 99);
+  background: white;
+  font-weight: 600;
+}
+
+#home-page#section p strong{
+  color: #f39d25;
 }
 
 
