--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,10 @@
 #home-page#section p strong{
   color: #f39d25;
 }
-
-
+#home-page#section img{
+  width:200px;
+  height:200px;
+}  
 mark{
   color: yellow;
   background: #000000 url(../assets/subtle-grey.png) repeat;
