--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
   background-image: linear-gradient(0deg, rgba(0,0,0,0.49),rgba(0,0,0,0.49)), url(../assets/subtle-grey.png)!important;
 }
 
+section[data-state="home-background"]{
+  color:black;
+}
 #home-page#section p{
   color: rgb(75, 85, 99);
   background: white;
