--- a/css/style.css
+++ b/css/style.css
@@ -20,20 +20,20 @@
   background-image: linear-gradient(0deg, rgba(0,0,0,0.49),rgba(0,0,0,0.49)), url(../assets/subtle-grey.png)!important;
 }
 
-section[data-state="home-background"]{
+.reveal section[data-state="home-background"]{
   color:black;
 }
-#home-page#section p{
+.reveal #home-page#section p{
   color: rgb(75, 85, 99);
   background: white;
   font-weight: 600;
 }
 
-#home-page#section p strong{
+.reveal #home-page#section p strong{
   color: #f39d25;
 }
 
-#home-page#section img{
+.reveal #home-page#section img{
   width:200px;
   height:200px;
   transform:rotate(-30deg);
