--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
   color: #f39d25;
 }
 
+.text-shadow-orange-white{
+  text-shadow: -4px 3px 0 #f19c33, -14px 7px 0 #0a0e27;
+  -webkit-text-stroke: 1px #000000;
+}
+
+.text-shadow-white-orange{
+  text-shadow: -4px 3px 0 #ffffff, -14px 7px 0 #0a0e27;
+  -webkit-text-stroke: 1px #000000;
+}
+
 .reveal .slide-background {
   background-image: linear-gradient(
     to right top,
