--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
   color: #f39d25!important;
 }
 
+.background-pattern{
+  background: #000000 url(../assets/subtle-grey.png) repeat;
+    padding-right: 19px;
+    padding-left: 19px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
 .text-shadow-orange-white{
   text-shadow: -4px 3px 0 #f19c33, -14px 7px 0 #0a0e27!important;
   -webkit-text-stroke: 1px #000000!important;
