--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ section#home-page img{
 }  
 
 mark{
-  color: yellow;
+  color: #edd714;
   background: #000000 url(../assets/subtle-grey.png) repeat;
   padding-right: 19px;
   padding-left: 19px;
