--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ mark{
   padding: 25px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.2);
+  width: fit-content;
 }
 
 .aria-keyshortcuts-container > *,
@@ -185,7 +186,7 @@ mark{
   color: #000000 !important;
   font-weight: 600;
   background: white;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
   font-size: 1.3rem;
   word-spacing: 4px;
