--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ mark{
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.2);
   width: fit-content;
+  background: lightgray;
 }
 
 .aria-keyshortcuts-container > *,
