--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ mark{
   word-spacing: 4px;
   border: 2px solid #171515;
   box-shadow: 0 0 32px rgba(0, 0, 0, 0.3);
+  margin: 5px;
 }
 
 #aria-keyshortcuts-03 div {
